# ctmo2

./: .clang-format  .clang-tidy  .gitignore  .travis-new.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.rst  README_DEV.rst  clang-tidy.sh  cppcheck.sh  ctmo.plist  format.sh  genindex.html  index.html  install-mpi-travis.sh  install-travis.sh  installation.html  intro.html  objects.inv  output.html  params-example.html  params.html  params_example.html  search.html  searchindex.js  test-integration-travis.sh  test_integration_travis.sh  tutorial.html
.travis/: before_install.sh  install-mpi-travis.sh  install-travis.sh  install.sh  install_mpi.sh  test-integration-travis.sh
NCtmo2/: NCtmo2.sln
_sources/: index.rst.txt  installation.rst.txt  intro.rst.txt  params.rst.txt  params_example.rst.txt  tutorial.rst.txt
cmake/: compile_options.txt  tools.cmake
data/: Square4x3_DCA.model  Square4x4.model  Triangle3x2_DCA.model  Triangle4x2_DCA.model  Triangle4x3_DCA.model  Triangle4x4_DCA.model
docs/: .conf.py.swp  Makefile  conf.py  index.rst  installation.rst  intro.rst  make.bat  output.rst  params-example.rst  params.rst  tutorial.rst
html/: .buildinfo  genindex.html  index.html  (+5 more)
src/: CMakeLists.txt  ctmo.cpp  ctmo_DCA.cpp  ctmo_afm.cpp  ctmo_dca.cpp  ctmo_green.cpp  ctmo_nosc.cpp  ctmo_nosc_green.cpp  ctmo_slmc.cpp
src/Includes/: PrintVersion.hpp
src/Includes/IS/: ABC_MarkovChain.hpp  ABC_MarkovChainSubMatrix.hpp  ABC_MarkovChain_GreenStyle.hpp  ABC_MarkovChain_GreenStyle_Newer.hpp  ABC_MarkovChain_GreenStyle_TMP.hpp  ABC_MonteCarlo.hpp  ISData.hpp  ISResult.hpp  MarkovChain.hpp  MarkovChainSubMatrix.hpp  MonteCarlo.hpp  MonteCarloBuilder.hpp  MonteCarloBuilder_AFM.hpp  MonteCarloBuilder_DCA.hpp  MonteCarloSubMatrixBuilder.hpp  MonteCarloSubMatrixBuilder_AFM.hpp
src/Includes/IS/Obs/: FillingAndDocc.hpp  GreenBinning.hpp  HighFrequency.hpp  KineticEnergy.hpp  Observables.hpp
src/Includes/Models/: ABC_H0.hpp  ABC_H0_DCA.hpp  ABC_H0_Vers2.hpp  ABC_Model.hpp  H0Triangle.hpp  HybFMAndTLoc.hpp  ModelSquare2x2.hpp  ModelSquare4x4.hpp  ModelSquare4x4_DCA.hpp  ModelSquare6x6.hpp  ModelSquare8x8.hpp  ModelTriangle2x2.hpp  SIAM_Square.hpp  UTensor.hpp  UTensorSimple.hpp  UTensorSimple_SameSpinOnly.hpp
src/Includes/Utilities/: ABC_SelfConsistency.hpp  CMDParser.hpp  ConfigParser.hpp  Conventions.hpp  FS.hpp  Fourier.hpp  Fourier_DCA.hpp  GreenMat.hpp  GreenTau.hpp  GreenTauTMP.hpp  IO.hpp  IOConstruct.hpp  Integrator.hpp  LinAlg.hpp  Logging.hpp  MPIResult.hpp  MPITools.hpp  MPIUtilities.hpp  Matrix.hpp  SelfConsistency.hpp  SelfConsistencyBuilder.hpp  SelfConsistencyBuilder_AFM.hpp  SelfConsistencyBuilder_DCA.hpp  SelfConsistency_DCA.hpp  SymetrizeSpins_AFM.hpp  Utilities.hpp  Vertices.hpp  VerticesSimple.hpp  VerticesSimple_GreenStyle.hpp  VerticesSimple_SameSpinOnly.hpp  VerticesSimple_TMP.hpp
src/Models_Maxime/: anisotropicplaquette3x2.model  anisotropicplaquette3x2_DCA.model  anisotropicplaquette4x2.model  anisotropicplaquette4x3.model  anisotropicplaquette4x3_DCA.model  anisotropicplaquette4x4.model  plaquette3x2_DCA.model  plaquette4x3_DCA.model
test/: ABC_H0Tests.cpp  ABC_H0_Vers2_Tests.cpp  ABC_ModelTests.cpp  CMakeLists.txt  FillingAndDoccTests.cpp  FourierTests.cpp  Fourier_DCATests.cpp  GreenBinningTests.cpp  GreenMatTests.cpp  GreenTauTests.cpp  H0TriangleTests.cpp  HybFMAndTLocTests.cpp  IOTests.cpp  IntegratorTests.cpp  MarkovChainSquare2x2Tests.cpp  MarkovChainSubMatrixSquare2x2Tests.cpp  MarkovChainTests.cpp  MarkovChainTriangle2x2Tests.cpp  MarkovChainTriangle2x2_SLMC_Tests.cpp  MatrixTests.cpp  ModelTriangle2x2Tests.cpp  ObservablesTests.cpp  SelfConsistencyTests.cpp  TestTools.hpp  UTensorSimpleTests.cpp  UTensorTests.cpp  UtilitiesTests.cpp  VerticesSimpleTests.cpp  VerticesTests.cpp  test_integration.py
test/Simulations/2x2Square_2Orb_U4.5/: Square2x2.model  params1.json  runCDMFT.sh  slurm_beluga.sh
test/Simulations/2x2Square_2Orb_U4.5/Stats_Good/: params1.json  params112.json  slurm.sh  statsobs.json
test/Simulations/2x2Square_Multiorbital_test/: params12.json  runCDMFT.sh
test/Simulations/2x2Square_Multiorbital_test/Good/: params31.json
test/Simulations/2x2Square_n1_U7_b10/: params1.json  params_good_newH0.json
test/Simulations/2x2Square_tp_tpp_beta50_U5/: params1.json  runCDMFT.sh  slurm.sh  slurm_beluga.sh
test/Simulations/2x2Triangle_AFM/: params1.json
test/Simulations/2x2Triangle_n099_tp04_U6.90_b12/: params1.json  runCDMFT.sh  slurm.sh
test/Simulations/2x2Triangle_tp04_b5_U3/: params1.json  slurm_mp2b.sh
test/Simulations/2x2Triangle_tp04_b5_U3/Good/: Obs.json
test/Simulations/2x2Triangle_tp04_b5_U3/GoodNew/: Obs.json  params1.json
test/Simulations/2x2Triangle_tp04_b5_U3/GoodOld/: Obs.json  params1.json
test/Simulations/2x2_DCA/: params1.json  slurm_beluga.sh
test/Simulations/2x2_DCA_b5_U3/: params1.json  slurm_beluga.sh  slurm_mp2b.sh
test/Simulations/2x2_DCA_b5_U3/GoodOld/: Obs.json  params1.json
test/Simulations/4x4_DCA/: Square4x4_DCA.model  params1.json  slurm.sh
test/Simulations/4x4_DCA_b10_U3/: params1.json  slurm_mp2b.sh
test/Simulations/4x4_DCA_b10_U3/Good/: Obs.json  params1.json
test/Simulations/DMFT_MultiOrbital_Test/: params41.json  runCDMFT.sh
test/Simulations/DMFT_MultiOrbital_Test/Good/: params42.json  runCDMFT.sh
test/Simulations/DMFT_n085_b16.67_U14/: params1.json  runCDMFT.sh  slurm.sh
test/Simulations/dmft_bethe_hubbard_holstein/: params17.json  run_bethe.py
test/Simulations/holstein_DMFT_T0.3/: params1.json  slurm_mp2b.sh
test/Simulations/holstein_T0.3/: params1.json  runCDMFT.sh
test/data/DMFT/: params1.json  params100.json  params_3Orb.json  params_obs110.json  params_selfcon.json  test_dmft0.json  testselfconsistency.json
test/data/cdmft_square2x2/: params1.json
test/data/cdmft_triangle/: params_obs66.json  params_obs_binning5.json  testtriangle.json
test/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
(+80 files in other folders)
